<resources>
    <string name="app_name">Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Registration</string>
    <string name="button2">Normal Registration</string>
    <string name="title_activity_event">Event</string>
    <string name="hint_name">Name</string>
    <string name="hint_clg">College</string>
    <string name="hint_mob">Mobile</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_email">Event</string>
    <string name="hint_city">City</string>
    <string name="hint_spin">Under-graduate</string>
    <string name="btn_register">Register</string>
    <string name="spinner_title">Degree</string>


    <string-array name = "spinner_item">
        <item>Under-graduate</item>
        <item>PhD</item>
        <item>M.tech</item>
        <item>MCA</item>
    </string-array>

    <string-array name = "spinner_item_nos">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_registration">Registration</string>
</resources>
